# zigbee2mqtt

./: CAPABILITIES.md  Cargo.toml  Dockerfile  README.md  compose.yml
docs/: deploy-lxc.md  zigbee2mqtt.md
lxc/: provision.sh  zigbee2mqtt.conf.example
scripts/: backup.sh  configure.sh  entrypoint.sh  install.sh  restore.sh
src/: abi_export.rs  lib.rs  main.rs
